# clocks

./: .gitignore  CMakeLists.txt  README.md
docs/: notes.txt
src/: CMakeLists.txt  chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  debug.h  log.h  main.c  memory.c  memory.h  object.c  object.h  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h
test/: CMakeLists.txt  notes.txt
test/language/: driver
test/language/class/: inherit_self.expect  local_inherit_self.expect
test/language/constructor/: return_value.expect
test/language/function/: too_many_arguments.expect  too_many_parameters.expect
test/language/method/: too_many_arguments.expect  too_many_parameters.expect
test/language/return/: at_top_level.expect
test/language/super/: no_superclass_bind.expect  super_at_top_level.expect  super_in_top_level_function.expect
test/language/this/: this_at_top_level.expect  this_in_top_level_function.expect
test/language/variable/: collide_with_parameter.expect  duplicate_local.expect  duplicate_parameter.expect  use_local_in_initializer.expect
test/unit_test/: CMakeLists.txt  unit_tests.h
test/unit_test/chunk/: CMakeLists.txt  chunk_unit.c
test/unit_test/compiler/: CMakeLists.txt
test/unit_test/debug/: CMakeLists.txt
test/unit_test/memory/: CMakeLists.txt
test/unit_test/mocks/: memory_mocks.h  value_mocks.h
test/unit_test/scanner/: CMakeLists.txt
test/unit_test/value/: CMakeLists.txt
test/unit_test/vm/: CMakeLists.txt
utils/: cleanall  docs  open_docs  setup  tests
